<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilupdatecomponent.ProfilUpdateActivity">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_gravity="center|top"
        >



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            >

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/edt_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_birthday"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="none"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_street_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_street"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_city"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_postal_code"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_country"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>





        <Button
            android:id="@+id/btn_update_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Modifier"
            android:textSize="16sp"
            android:textColor="@android:color/black"


            />

    </LinearLayout>
</ScrollView>